// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8143564,
  "ahorro_mensual_cop": 678631,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.23,
  "roi_porcentaje": 1037.7,
  "tir": 26.57,
  "vpn": 70736399,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=false > table 1`] = `
{
  "final_acumulado": 333094851,
  "year0_flujo": -35522445,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 7736386,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 407178,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 8122543,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 427502,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8143564,
  "ahorro_mensual_cop": 678631,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.27,
  "roi_porcentaje": 3132.83,
  "tir": 34.39,
  "vpn": 69248758,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=true > table 1`] = `
{
  "final_acumulado": 323200823,
  "year0_flujo": -10656733,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 6951948,
    "excedentes_cop": 0,
    "flujo_neto_cop": 784438,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 407178,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 6951948,
    "excedentes_cop": 0,
    "flujo_neto_cop": 1170595,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 427502,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8160000,
  "ahorro_mensual_cop": 680000,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 4000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 39522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.65,
  "roi_porcentaje": 936.13,
  "tir": 24.33,
  "vpn": 67060267,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=false > table 1`] = `
{
  "final_acumulado": 330458025,
  "year0_flujo": -39522445,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 7752000,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 408000,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 8139600,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 428400,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8160000,
  "ahorro_mensual_cop": 680000,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 4000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 39522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.78,
  "roi_porcentaje": 2794.25,
  "tir": 30.2,
  "vpn": 65405122,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=true > table 1`] = `
{
  "final_acumulado": 319449897,
  "year0_flujo": -11856733,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 7734768,
    "excedentes_cop": 0,
    "flujo_neto_cop": 17232,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 408000,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 7734768,
    "excedentes_cop": 0,
    "flujo_neto_cop": 404832,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 428400,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8350518,
  "ahorro_mensual_cop": 695877,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.14,
  "roi_porcentaje": 1059.09,
  "tir": 27.1,
  "vpn": 73093010,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=false > table 1`] = `
{
  "final_acumulado": 340690941,
  "year0_flujo": -35522445,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 206954,
    "flujo_neto_cop": 7932992,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 417526,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 214312,
    "flujo_neto_cop": 8326140,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438218,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8350518,
  "ahorro_mensual_cop": 695877,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.16,
  "roi_porcentaje": 3204.11,
  "tir": 35.46,
  "vpn": 71605370,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=true > table 1`] = `
{
  "final_acumulado": 330796913,
  "year0_flujo": -10656733,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 6951948,
    "excedentes_cop": 206954,
    "flujo_neto_cop": 981044,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 417526,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 6951948,
    "excedentes_cop": 214312,
    "flujo_neto_cop": 1374192,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438218,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8361153,
  "ahorro_mensual_cop": 696763,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 4000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 39522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.55,
  "roi_porcentaje": 954.13,
  "tir": 24.79,
  "vpn": 69302572,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=false > table 1`] = `
{
  "final_acumulado": 337572994,
  "year0_flujo": -39522445,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 201153,
    "flujo_neto_cop": 7943095,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 418058,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 207975,
    "flujo_neto_cop": 8337176,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438799,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8361153,
  "ahorro_mensual_cop": 696763,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 4000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 39522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.66,
  "roi_porcentaje": 2854.26,
  "tir": 31.06,
  "vpn": 67647427,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=true > table 1`] = `
{
  "final_acumulado": 326564866,
  "year0_flujo": -11856733,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 7734768,
    "excedentes_cop": 201153,
    "flujo_neto_cop": 208327,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 418058,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 7734768,
    "excedentes_cop": 207975,
    "flujo_neto_cop": 602408,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438799,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 3.98,
  "roi_porcentaje": 1098.29,
  "tir": 28.08,
  "vpn": 77413464,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=false > table 1`] = `
{
  "final_acumulado": 354617105,
  "year0_flujo": -35522445,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 8293436,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 8699400,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.9,
  "roi_porcentaje": 3334.79,
  "tir": 37.47,
  "vpn": 75925823,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=true > table 1`] = `
{
  "final_acumulado": 344723077,
  "year0_flujo": -10656733,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 6951948,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 1341488,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 6951948,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 1747452,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 4000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 39522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.38,
  "roi_porcentaje": 987.13,
  "tir": 25.65,
  "vpn": 73413464,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=false > table 1`] = `
{
  "final_acumulado": 350617105,
  "year0_flujo": -39522445,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 569933,
    "flujo_neto_cop": 8293436,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 589263,
    "flujo_neto_cop": 8699400,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 4000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 39522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.46,
  "roi_porcentaje": 2964.27,
  "tir": 32.67,
  "vpn": 71758320,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=true > table 1`] = `
{
  "final_acumulado": 339608977,
  "year0_flujo": -11856733,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 7734768,
    "excedentes_cop": 569933,
    "flujo_neto_cop": 558668,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 7734768,
    "excedentes_cop": 589263,
    "flujo_neto_cop": 964632,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: tax benefit toggles > ambos beneficios > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 2.36,
  "roi_porcentaje": 1148.17,
  "tir": 36.92,
  "vpn": 92086964,
}
`;

exports[`golden masters: tax benefit toggles > ambos beneficios > table 1`] = `
{
  "final_acumulado": 372336829,
  "year0_flujo": -35522445,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 12166600,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 18672797,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: tax benefit toggles > solo deduccion renta > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 2.98,
  "roi_porcentaje": 1148.17,
  "tir": 33.59,
  "vpn": 89594653,
}
`;

exports[`golden masters: tax benefit toggles > solo deduccion renta > table 1`] = `
{
  "final_acumulado": 372336829,
  "year0_flujo": -35522445,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 9455385,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 15961582,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: tax benefit toggles > solo depreciacion > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35522445,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 2.83,
  "roi_porcentaje": 1131,
  "tir": 33.59,
  "vpn": 87045449,
}
`;

exports[`golden masters: tax benefit toggles > solo depreciacion > table 1`] = `
{
  "final_acumulado": 366236596,
  "year0_flujo": -35522445,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 12166600,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 12572564,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;
